--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,7 @@
-Team per la Trasformazione Digitale.
+Davide
+
+Doina
+
+Clown (DAN The Assistant)
 
 The version control system provides attribution for specific lines of code.
