--- a/_posts/2019-03-01-New-Post.md
+++ b/_posts/2019-03-01-New-Post.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: New Post
-categories: [categoria1]
-tags: [tag1, tag2, tag3]
+categories: [rabbit-world]
+tags: [rabbit, tech, intern]
 lang: en
 ref: new
 ---
