--- a/it/404.md
+++ b/it/404.md
@@ -1,11 +1,11 @@
 ---
 layout: page
 title: Oops!
-lang: en
+lang: it
 ref: 404
 permalink: /404.html
 ---
 
-404 - Page not found
+404 - Pagina non trovata
 
 [Back to homepage]({{ site.baseurl }}/)
