--- a/it/404.md
+++ b/it/404.md
@@ -3,9 +3,9 @@ layout: page
 title: Oops!
 lang: it
 ref: 404
-permalink: /404.html
+permalink: /it/404.html
 ---
 
 404 - Pagina non trovata
 
-[Back to homepage]({{ site.baseurl }}/)
+[Torna alla homepage]({{ site.baseurl }}/)
