--- a/en/404.md
+++ b/en/404.md
@@ -6,6 +6,12 @@ ref: 404
 permalink: /404.html
 ---
 
+<p style="text-align: center; font-weight: bold; font-size: 24px;">
 404 - Page not found
+</p>
+
+<p style="text-align: center;">
+  <img src="assets/images/404.jpg" alt="Under Construction" style="max-width: 100%; height: auto;">
+</p>
 
 [Back to homepage]({{ site.baseurl }}/)
