--- a/it/404.md
+++ b/it/404.md
@@ -6,6 +6,12 @@ ref: 404
 permalink: /it/404.html
 ---
 
+<p style="text-align: center; font-weight: bold; font-size: 24px;">
 404 - Pagina non trovata
+</p>
+
+<p style="text-align: center;">
+  <img src="assets/images/404.jpg" alt="In costruzione" style="max-width: 100%; height: auto;">
+</p>
 
 [Torna alla homepage]({{ site.baseurl }}/)
