--- a/it/404.md
+++ b/it/404.md
@@ -11,7 +11,7 @@ permalink: /it/404.html
 </p>
 
 <p style="text-align: center;">
-  <img src="assets/images/404.jpg" alt="In costruzione" style="max-width: 100%; height: auto;">
+  <img src="../assets/images/404.jpg" alt="In costruzione" style="max-width: 50%; height: auto;">
 </p>
 
 [Torna alla homepage]({{ site.baseurl }}/)
