--- a/en/404.md
+++ b/en/404.md
@@ -11,7 +11,7 @@ permalink: /404.html
 </p>
 
 <p style="text-align: center;">
-  <img src="https://rabbit-world.github.io/euro-agency/assets/images/404.jpg" alt="Under Construction" style="max-width: 50%; height: auto;">
+  <img src="https://rabbit-world.github.io/euro-agency/assets/images/rabbit-hole.gif" alt="Page not found" style="max-width: 100%; height: auto;">
 </p>
 
 [Back to homepage]({{ site.baseurl }}/)
